# sga_readines

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml  readiness.yaml
.claude/: settings.local.json
src/sga_readiness/: __about__.py  __init__.py  checker.py  cli.py  config.py  models.py
src/sga_readiness/checks/: __init__.py  config.py  dependency.py  http.py  port.py
tests/: __init__.py  test_checker.py  test_checks.py  test_cli.py  test_config.py  test_models.py  test_sga_readiness.py
